--- a/app/public/room.html
+++ b/app/public/room.html
@@ -71,6 +71,11 @@
         <div id="waitingForQuestionSelect" style="display: block;">Waiting for the player to select a question...</div>
         <div id="questionContainer" style="display: none;"></div>
         <div id="answerContainer" style="display: none;"></div>
+        <div id="wrongAndSkipButtons" style="display: none;">
+            <button id="wrongButton" style="display: block;" onclick="wrongQuestion()">Wrong Answer</button>
+            <button id="skipButton" style="display: block;" onclick="skipQuestion()">Skip Question</button>
+        </div>
+        
     </div>
 
     <!-- Container for all player behavior: buzzer, displaying score, etc. -->
@@ -182,6 +187,9 @@
             let answerContainer = document.getElementById('answerContainer');
             answerContainer.style.display = 'block';
             answerContainer.textContent = 'Answer: ' + questionInfo.answer;
+
+            let wrongAndSkipButtons = document.getElementById('wrongAndSkipButtons');
+            wrongAndSkipButtons.style.display = 'block';
         });
 
         function displayZoomedCell(questionText) {
