--- a/app/public/index.html
+++ b/app/public/index.html
@@ -16,13 +16,13 @@
             font-size: 70px;
         }
 
-        div{
+        div {
             text-align: center;
             margin-top: 70px;
             font-size: 45px;
         }
 
-        button{
+        button {
             font-size: 45px;
             background-color: navy;
             color: goldenrod;
@@ -37,7 +37,7 @@
 <body>
     <h1>Jeopardy!</h1>
     <div>
-        <label for="display_name">Display Name:</label>
+        <label for="display_name">Name:</label>
         <input id="display_name" name="display_name" type="text" />
         <p id="errorMessage"></p>
         <button id="createRoom" onclick="createRoom()">Create Room</button><br><br>
@@ -89,7 +89,6 @@
                     
                     window.location.href = `http://localhost:3000/room/${roomKey}`;
                 } else if (response.status === 400) {
-                    
                     return response.json().then(data => {
                         document.getElementById("errorMessage").textContent = "That name is already taken. Please try another name";
                     });
